--- a/content/post/2020-06-16-use-flipbooks-to-explain-your-code-and-thought-process.Rmd
+++ b/content/post/2020-06-16-use-flipbooks-to-explain-your-code-and-thought-process.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Use Flipbooks to Explain Your Code and Thought Process
 author: Bryan Shalloway
-date: '2020-06-16'
+date: '2020-06-25'
 slug: use-flipbooks-to-explain-your-code-and-thought-process
 categories:
   - programming
@@ -34,28 +34,32 @@ Now, a few years and reads through [R for Data Science](https://r4ds.had.co.nz/)
 
 ><blockquote class="twitter-tweet"><p lang="en" dir="ltr">What is your <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> (or other <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> ) approach for doing arbitrary pairwise operations across variables? Mine is frequently something like:<br><br>I. nest...<br>II. expand combos... <br>III. filter...<br>IV. map fun(s)...<br>...<br><br>I wrote a post walking through this: <a href="https://t.co/xRnRf5yh3m">https://t.co/xRnRf5yh3m</a> <a href="https://t.co/Zvxey2gm3H">pic.twitter.com/Zvxey2gm3H</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1271194908477591553?ref_src=twsrc%5Etfw">June 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-However each of these examples were built using PowerPoint (and a lot of copy and pasting of code + output). The series of images are not easily reproducible -- I can't recreate or share how I made these slides (at least not without going through another highly manual exercise). In this post, I'll point to resources on how to create these sorts of technical communication materials in ways that are reproducible.
+However each of these examples were built using PowerPoint (and a lot of copy and pasting of code + output). The series of images cannot be easily reproduced (at least not without going through another highly manual exercise). In this post, I'll point to resources on how to create these sorts of code communication materials in ways that *are reproducible*.
 
 # Flipbooks
 
-When I started writing this post, I planned to call this type of output a "**LEXPREX**" for "**L**ine-by-line **EX**ecution with **PR**inted **EX**amples" (and a name evocative of the inspiring [reprex](https://github.com/tidyverse/reprex) package by [Jenny Bryan](https://twitter.com/JennyBryan])^[I also considered names such as `pexprex`, `sexprex`, `pripex`, ... I'll let the reader guess at the acronyms.]). But, thankfully, an excellent solution containing thorough explanations (and a much better name) already existed, [flipbooks](https://evamaerey.github.io/flipbooks/about). 
+When I started writing this post, I planned to call this type of output a "**LEXPREX**" for "**L**ine-by-line **EX**ecution with **PR**inted **EX**amples" (and a name evocative of the inspiring [reprex](https://github.com/tidyverse/reprex) package by [Jenny Bryan](https://twitter.com/JennyBryan])^[I also considered names such as `pexprex`, `sexprex`, `pripex`, ... I'll let the reader guess at the acronyms.]). But, thankfully, an excellent solution containing thorough explanations (and a much better name) already existed, *flipbooks*. 
 
-At this point you should stop reading this blog and instead go learn about [flipbookr](https://github.com/EvaMaeRey/flipbookr). My post was largely written before I learned about this package^[I just don't know how to "kill my darlings".]. Hence the next several sections discuss making flipbook-like solutions (but in ways that would require a great deal more copy-and-pasting of code to implement). See additional resources in tweet below.
+As described in the [flipbookr documentation](https://evamaerey.github.io/flipbooks/about), “flipbooks are tools that present side-by-side, aligned, incremental code-output."
 
-><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wow, thanks <a href="https://twitter.com/KellyBodwin?ref_src=twsrc%5Etfw">@KellyBodwin</a> for the recommendation. <a href="https://twitter.com/EvaMaeRey?ref_src=twsrc%5Etfw">@EvaMaeRey</a> 📦 `flipbookr` is another incredible resource for <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> education that will save me so much time. <br><br>- <a href="https://t.co/WB5jWIOg5h">https://t.co/WB5jWIOg5h</a><br>- <a href="https://t.co/z7NtBVASXl">https://t.co/z7NtBVASXl</a> <a href="https://t.co/9DEQUR1teY">https://t.co/9DEQUR1teY</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1272761990025486336?ref_src=twsrc%5Etfw">June 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+![(Example inspired by 'Many Models' chapter of 'R For Data Science' by Grolemund & Wickham.)](https://github.com/brshallo/flipbookr-gifs-examples/raw/master/example-r4ds.gif?raw=true )
 
-If you are still interested in reading about other (less elegant, less fully featured) approaches to building flipbook-like outputs, continue on.
+At this point you should stop reading this blog and instead go learn about [flipbookr](https://github.com/EvaMaeRey/flipbookr). My post was largely written before I learned about this package. Hence, starting at [this presentation](https://rstudio.com/resources/rstudioconf-2020/flipbooks-evangeline-reynolds/) by [Gina Reynolds](https://twitter.com/EvaMaeRey) or `flipbookr`'s [about page](https://evamaerey.github.io/flipbooks/about) will generally be a more productive use of your time. Just look at all of the beautiful flipbook examples you can find there!
+
+[![](/post/2020-06-16-use-flipbooks-to-explain-your-code-and-thought-process_files/flipbookr-example.gif)](https://evamaerey.github.io/flipbooks/about)
+
+The remainder of this post discusses either tools adjacent to flipbooks or describes workflows that can also be found within `flipbookr` documentation.
 
 # Example with xaringan
 
-The [xaringan](https://github.com/yihui/xaringan) package for making slideshows contains highlighting features (and is what `flipbookr` is built-on). For highlighting *code*, you can use the trailing comment `#<<`^[Which I prefer over the alternatives of using the leading `*` or wrapping the message in`{{}}`.]. For highlighting *output*, there is the `highlight.output` code chunk option.
+The [xaringan](https://github.com/yihui/xaringan) package for making slideshows contains highlighting features (and is what `flipbookr` is built-on). For highlighting *code* you can use the trailing comment `#<<`^[Which I prefer over the alternatives of using the leading `*` or wrapping the message in`{{}}`.]. For highlighting *output* there is the `highlight.output` code chunk option.
 
 ><iframe src="https://slides.yihui.org/xaringan/#31" style="width: 560px; height: 315px;"></iframe>
 
 ><iframe width="560" height="315"
 src="https://slides.yihui.org/xaringan/#32"></iframe>
 
-[Mitchell O'Hara-Wild](https://twitter.com/mitchoharawild)'s 2019 presentation on *"Flexible futures for [fable](https://github.com/tidyverts/fable) functionality"* contains a helpful example where he uses these features to build a code walk-through ([source code](https://github.com/mitchelloharawild/fable-combinations-2019/blob/6a55628e1ad156c0040676b7881a799f7f75370a/user2019/index.Rmd)).
+[Mitchell O'Hara-Wild](https://twitter.com/mitchoharawild)'s 2019 presentation on *"Flexible futures for [fable](https://github.com/tidyverts/fable) functionality"* contains a helpful example where he uses these features to walk-through [his code](https://github.com/mitchelloharawild/fable-combinations-2019/blob/6a55628e1ad156c0040676b7881a799f7f75370a/user2019/index.Rmd).
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DhDOTxojQ3k?start=554" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -63,29 +67,33 @@ See [More sophisticated highlighting] if your use-case requires more than line-l
 
 # Animating a flipbook
 
-I sometimes want to convert a flipbook into a gif, e.g. for sharing an example in a README or a snippet of a cool concept on social media. If you ignored my prior entreaty, this is a second reminder to stop and go read about `flipbookr`, which contains the `code_create_gif_flipbook()` function. Just look at the beautiful gif thumbnails of flipbooks on the [about page](https://evamaerey.github.io/flipbooks/about)!
+I sometimes want to convert a flipbook into a gif, e.g. when sharing an example in a README or a snippet of a concept on social media. If you ignored my prior entreaty, this is a second reminder to stop and go read about `flipbookr`. The [template file](https://evamaerey.github.io/flipbooks/about) now shows how to create gifs using `flipbookr` --> `pagedown` --> `magick`^[Creates html --> pdf --> gif.]. I also describe this workflow and provide examples [here](https://github.com/brshallo/flipbookr-gifs-examples), e.g.
 
-![](/post/2020-06-16-use-flipbooks-to-explain-your-code-and-thought-process_files/flipbookr-example.gif)
+![(Example from a prior blog post, "Riddler Solutions: Pedestrian Puzzles")](https://github.com/brshallo/flipbookr-gifs-examples/raw/master/example-riddler-solution.gif)
 
-**My initial approach (written prior to learning of `flipbookr`):**
+# Closing note
 
-If you read the source code at the link in the tweet below, you will see I use...
-
-* [flair](https://github.com/kbodwin/flair) for the code highlighting
-* [xaringan](https://github.com/yihui/xaringan) for the slides
-* [pagedown](https://github.com/rstudio/pagedown) to convert the html slides into pdf
-* [magick](https://github.com/ropensci/magick) to convert the pdf into images, apply a few (hacky) transformations, and then stitch them together into a gif
-
-><blockquote class="twitter-tweet"><p lang="en" dir="ltr">❤️flair📦by <a href="https://twitter.com/KellyBodwin?ref_src=twsrc%5Etfw">@KellyBodwin</a> for teaching <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> and explaining the %&gt;% in particular. Here&#39;s a quick example using: `flair` + `xaringan` --&gt; `pagedown` --&gt; `magick` to make a gif of expanding chain of <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> operations: <a href="https://t.co/cSi858dFVa">https://t.co/cSi858dFVa</a> <br><br>(thx also <a href="https://twitter.com/xieyihui?ref_src=twsrc%5Etfw">@xieyihui</a> <a href="https://twitter.com/opencpu?ref_src=twsrc%5Etfw">@opencpu</a> ) <a href="https://t.co/7nvWDabKgm">pic.twitter.com/7nvWDabKgm</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1272737172978905088?ref_src=twsrc%5Etfw">June 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-Next step would have been trying to think through a more programmatic way of building these slides and calling these steps. Thankfully, instead, [Kelly Bodwin](https://twitter.com/KellyBodwin) pointed me to `flipbookr` `r emo::ji("smile")`!
-
-## Closing note
-
-I also highly recommend exploring the [Rstudio Education blog](https://education.rstudio.com/blog/). The site contains some enormously helpful resources for improving your technical communication. It was here that I stumbled on the post [Decorate your R code with flair](https://education.rstudio.com/blog/2020/05/flair/) -- which inspired me to make a first attempt at building a reproducible animation of line-by-line execution of R code (something I'd been wanting to do for ages). The positive response and feedback of which led me to learn about `flipbookr` and inspired me to finish writing this blog post. 
+I recommend exploring the [Rstudio Education blog](https://education.rstudio.com/blog/). The site contains helpful resources for improving your technical communication. It was here that I stumbled on the post [Decorate your R code with flair](https://education.rstudio.com/blog/2020/05/flair/). Reading this inspired me to make a first attempt at building a reproducible animation of line-by-line execution of R code (something I'd been wanting to do for ages). The positive response + feedback to my initial tweet led me to learn about `flipbookr` and motivated additional actions (described in [Engagement & contributions]) including the review and completion of this blog post.
 
 # Appendix
 
 ## More sophisticated highlighting
 
-For more sophisticated highlighting of *code*, use the [flair package](https://github.com/kbodwin/flair). I'm not sure what to recommend for highlighting changes in *output* to the console... perhaps [diffobj](https://github.com/brodieG/diffobj) would be an option. You could also just explicitly format the output, e.g. using  [gt](https://github.com/rstudio/gt) or [kableExtra](https://github.com/haozhu233/kableExtra) for tabular outputs, or using geoms, annotations, etc. in [ggplot](https://github.com/tidyverse/ggplot2)s. And, of course, you can always dive into the html.
+For more sophisticated highlighting of *code*, use the [flair package](https://github.com/kbodwin/flair). I'm not sure what to recommend for highlighting changes in *output* to the console... perhaps [diffobj](https://github.com/brodieG/diffobj) would be an option. You could also just more explicitly format the output, e.g. using  [gt](https://github.com/rstudio/gt) or [kableExtra](https://github.com/haozhu233/kableExtra) for tabular outputs, or using geoms, annotations, etc. in [ggplot](https://github.com/tidyverse/ggplot2)s. And, of course, you can always dive into the html.
+
+## Engagement & contributions
+
+Blogging is time consuming. Reaching out to package maintainers or making contributions (even small ones) on open-source software projects can be intimidating. As a *tiny* success story, I documented actions that stemmed (in some part) from engaging with the #rstats online communities while working on this blog post topic:
+
+* While this post was in draft form, I tweeted out my initial approach (that used the [flair](https://github.com/kbodwin/flair) package). 
+    * The next step might have been trying to improve upon this. Thankfully, instead, [Kelly Bodwin](https://twitter.com/KellyBodwin) pointed me to `flipbookr` `r emo::ji("smile")`! 
+
+><blockquote class="twitter-tweet"><p lang="en" dir="ltr">P.S. <br><br>The `flair_lines()` function lets you highlight whole line(s) if you want! <br><br>{flipbookr} is a better option for making gifs/slides like this, but {flair} + {pagedown} + {magick} might help if you want specialty or layered highlighting.</p>&mdash; Kelly Bodwin (@KellyBodwin) <a href="https://twitter.com/KellyBodwin/status/1272741205365764097?ref_src=twsrc%5Etfw">June 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+* Kelly also created an [issue](https://github.com/kbodwin/flair/issues/15) to further discuss possible integrations between `flair` and `flipbookr`.
+* I remade my initial example using `flipbookr` ([see issue](https://github.com/EvaMaeRey/flipbookr/issues/22)). 
+    * I had first created an [issue](https://github.com/EvaMaeRey/flipbookr/issues/21) showing how to print `xaringan` slides incrementally using `pagedown::chrome_print()`.
+        * Which helped to close the loop on a related open [issue](https://github.com/rstudio/pagedown/issues/110) on `xaringan`.
+* Gina Reynolds made a variety of updates to `flipbookr`, one of which included adding the html --> pdf --> gif workflow to the template `r emo::ji("smile")`.
+
+><blockquote class="twitter-tweet"><p lang="en" dir="ltr">Big thanks to <a href="https://twitter.com/grrrck?ref_src=twsrc%5Etfw">@grrrck</a> and <a href="https://twitter.com/statsgen?ref_src=twsrc%5Etfw">@statsgen</a> for helps and <a href="https://twitter.com/xieyihui?ref_src=twsrc%5Etfw">@xieyihui</a> because {xaringan}! And to <a href="https://twitter.com/brshallo?ref_src=twsrc%5Etfw">@brshallo</a> and <a href="https://twitter.com/KellyBodwin?ref_src=twsrc%5Etfw">@KellyBodwin</a> for new ideas about how to share flipbooks, html -&gt; pdf -&gt; gif. Guidance now included in template update on this - this gif created w/ that workflow!🙏🤩</p>&mdash; Gina Reynolds (@EvaMaeRey) <a href="https://twitter.com/EvaMaeRey/status/1274837474460626945?ref_src=twsrc%5Etfw">June 21, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
